--- a/index.html
+++ b/index.html
@@ -9,17 +9,20 @@
   <script src="main.js"></script></head>
 
 </head>
-<body>
+<body ng-app='theApp'>
   <div id='title'>
-    <a class="clarkandcode" ui-sref='clark'><div>Clark</div>
-      <div class='under'>^ Resume` ^</div>
-    </a>
-    <div><span>and</span></div>
-    <a class="clarkandcode" ui-sref="code"> Code
-      <div class='under'>^ Projects ^</div>
-    </a>
+    <div id='nav'>
+      <a class="clarkandcode" ui-sref='clark'><div>Clark</div>
+        <div class='under'>^ Resume` ^</div>
+      </a>
+      <div><span>and</span></div>
+      <a class="clarkandcode" ui-sref="code"> Code
+        <div class='under'>^ Projects ^</div>
+      </a>
+    </div>
+    <ui-view></ui-view>
   </div>
-  <ui-view></ui-view>
+
   <a class="contactBubble" ui-sref='contact'><div class='contact'>Contact</div></a>
 </body>
 </html>
