--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
 
   <ui-view></ui-view>
 
-  <a class="contactBubble" ui-sref='contact'><div class='contact'>Contact</div></a>
+  <!-- <a class="contactBubble" ui-sref='contact'><div class='contact'>Contact</div></a> -->
 </body>
 </html>
