--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
   <link rel="stylesheet" href="style.css">
   <script src="bower_components/angular/angular.min.js"></script>
   <script src="bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
-  <script src="main.js"></script></head>
-
+  <script src="main.js"></script>
 </head>
+
 <body ng-app='theApp'>
 
   <ui-view></ui-view>
